hphp/hack/test/typecheck/class_meth7.php.exp
File "class_meth7.php", line 19, characters 11-12:
You cannot access this method (Typing[4112])
  File "class_meth7.php", line 13, characters 27-28:
  This member is private
